fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -13,13 +13,13 @@ body {
   align-items: center;
   justify-content: center;
 }
- /* Landing page styles */
 .landing-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  margin-top: 64px; /* adjust the value as needed */
 }
  .image-text-container {
   display: flex;
@@ -31,7 +31,6 @@ body {
  .image-container {
   width: 300px;
   height: 300px;
-  margin-bottom: 2rem;
   display: flex;
   justify-content: center;
 }
@@ -124,8 +123,7 @@ body {
     flex-wrap: wrap;
   }
    .icon {
-    font-size: 50px;
-    margin: 15px;
+    font-size: 35px;
   }
    .tech-stack-container {
     margin-top: 2rem;
